--- a/Q1 Cloud Automation Concepts/Assessment Assignment 1/Base/aa1_base_network.yml
+++ b/Q1 Cloud Automation Concepts/Assessment Assignment 1/Base/aa1_base_network.yml
@@ -53,6 +53,8 @@ Resources:
     Type: AWS::EC2::VPC
     Properties:
       CidrBlock: !Ref VPCCIDR
+      EnableDnsSupport: true
+      EnableDnsHostnames: true
       Tags: 
         - Key: Name
           Value: CACAA1VPC
